--- a/app/globals.css
+++ b/app/globals.css
@@ -16,6 +16,16 @@
   }
 }
 
+html,
+body {
+  margin: 0;
+  padding: 0;
+}
+
+canvas {
+  display: block;
+}
+
 body {
   color: rgb(var(--foreground-rgb));
   background: linear-gradient(
