started developing pages

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -23,6 +23,16 @@ body {
       rgb(var(--background-end-rgb))) rgb(var(--background-start-rgb));
 }
 
+@layer base {
+  @font-face {
+    font-family: "Playfair Display", serif;
+    font-optical-sizing: auto;
+    font-weight: 400;
+    font-style: normal;
+    src: url('https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap')
+  }
+}
+
 @layer utilities {
   .text-balance {
     text-wrap: balance;
