--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -2,17 +2,13 @@
 @tailwind components;
 @tailwind utilities;
 
-*,
+/* *,
 *:after,
 *:before {
   box-sizing: border-box;
-}
+} */
 
-html,
-body,
 #root {
-  height: 100%;
-  width: 100%;
   --foreground-rgb: 0, 0, 0;
   --background-start-rgb: 214, 219, 220;
   --background-end-rgb: 255, 255, 255;
@@ -27,7 +23,6 @@ body,
 }
 
 body {
-  margin: 0;
   color: rgb(var(--foreground-rgb));
   background: linear-gradient(to bottom,
       transparent,
