--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -2,11 +2,18 @@
 @tailwind components;
 @tailwind utilities;
 
-/* *,
-*:after,
-*:before {
+*{
   box-sizing: border-box;
-} */
+}
+
+html,
+body,
+#root {
+  width: 100%;
+  height: 100%;
+  margin: 0;
+  padding: 0;
+}
 
 #root {
   --foreground-rgb: 0, 0, 0;
